Clarify inheritance and clean descriptions
Removed redundant 'Access via the ... submodule.' from class descriptions unless a submodule is present. Added explicit inheritance information to class documentation pages where applicable. Updated code examples in guides and manual for clarity, including improved code formatting and minor corrections to code snippets.

--- a/contents/docs/classes/anchor/index.mdx
+++ b/contents/docs/classes/anchor/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Anchor
-description: Anchor positions returning Vec2 values for alignment. Access via the '' submodule.
+description: Anchor positions returning Vec2 values for alignment.
 ---
 
 
