--- a/contents/docs/classes/animation-controller/index.mdx
+++ b/contents/docs/classes/animation-controller/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: AnimationController
-description: Manages and controls sprite animations with multiple animation sequences. Access via the '' submodule.
+description: Manages and controls sprite animations with multiple animation sequences.
 ---
 
 ## Constructor
