--- a/contents/docs/classes/circle/index.mdx
+++ b/contents/docs/classes/circle/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Circle
-description: Represents a circle shape with position and radius. Access via the '' submodule.
+description: Represents a circle shape with position and radius.
 ---
 
 ## Constructor
