--- a/contents/docs/classes/color/index.mdx
+++ b/contents/docs/classes/color/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Color
-description: Represents an RGBA color. Access via the '' submodule.
+description: Represents an RGBA color.
 ---
 
 ## Constructor
