--- a/contents/docs/classes/easing-animation/index.mdx
+++ b/contents/docs/classes/easing-animation/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: EasingAnimation
-description: A class for animating values over time using easing functions. Access via the '' submodule.
+description: A class for animating values over time using easing functions.
 ---
 
 ## Constructor
