--- a/contents/docs/classes/effect/index.mdx
+++ b/contents/docs/classes/effect/index.mdx
@@ -1,4 +1,4 @@
 ---
 title: Effect
-description: Base class for timeline effects. Not directly instantiable. Access via the '' submodule.
+description: Base class for timeline effects. Not directly instantiable.
 ---
