--- a/contents/docs/classes/image-layer/index.mdx
+++ b/contents/docs/classes/image-layer/index.mdx
@@ -3,6 +3,8 @@ title: ImageLayer
 description: ImageLayer displays a single image as a layer. Access via the 'tilemap' submodule.
 ---
 
+Inherits from [Layer](/docs/classes/layer).
+
 
 ## Properties
 <hr style={{marginBottom: 0}} />
