--- a/contents/docs/classes/line/index.mdx
+++ b/contents/docs/classes/line/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Line
-description: A 2D line segment defined by two points: A and B. Access via the '' submodule.
+description: A 2D line segment defined by two points: A and B.
 ---
 
 ## Constructor
