--- a/contents/docs/classes/object-group/index.mdx
+++ b/contents/docs/classes/object-group/index.mdx
@@ -3,6 +3,8 @@ title: ObjectGroup
 description: ObjectGroup is a layer containing placed MapObjects. Access via the 'tilemap' submodule.
 ---
 
+Inherits from [Layer](/docs/classes/layer).
+
 
 ## Properties
 <hr style={{marginBottom: 0}} />
