--- a/contents/docs/classes/pixel-array/index.mdx
+++ b/contents/docs/classes/pixel-array/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: PixelArray
-description: Represents a 2D pixel buffer for image manipulation and blitting operations. Access via the '' submodule.
+description: Represents a 2D pixel buffer for image manipulation and blitting operations.
 ---
 
 ## Constructor
