--- a/contents/docs/classes/polygon/index.mdx
+++ b/contents/docs/classes/polygon/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Polygon
-description: Represents a polygon shape defined by a sequence of points. Access via the '' submodule.
+description: Represents a polygon shape defined by a sequence of points.
 ---
 
 ## Constructor
