--- a/contents/docs/classes/shader-state/index.mdx
+++ b/contents/docs/classes/shader-state/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: ShaderState
-description: Encapsulates a GPU shader and its associated render state. Access via the '' submodule.
+description: Encapsulates a GPU shader and its associated render state.
 ---
 
 ## Constructor
