--- a/contents/docs/classes/shader-uniform/index.mdx
+++ b/contents/docs/classes/shader-uniform/index.mdx
@@ -3,6 +3,8 @@ title: ShaderUniform
 description: Base model for shader uniform data structures. Access via the 'shader_uniform' submodule.
 ---
 
+Inherits from `BaseModel`.
+
 
 ## Methods
 ---
