--- a/contents/docs/classes/sprite/index.mdx
+++ b/contents/docs/classes/sprite/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Sprite
-description: Abstract base class for drawable game objects with a texture and transform. Access via the '' submodule.
+description: Abstract base class for drawable game objects with a texture and transform.
 ---
 
 ## Constructor
