--- a/contents/docs/classes/text/index.mdx
+++ b/contents/docs/classes/text/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Text
-description: A text object for rendering text to the active renderer. Access via the '' submodule.
+description: A text object for rendering text to the active renderer.
 ---
 
 ## Constructor
