--- a/contents/docs/classes/texture/index.mdx
+++ b/contents/docs/classes/texture/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Texture
-description: Represents a hardware-accelerated image that can be efficiently rendered. Access via the '' submodule.
+description: Represents a hardware-accelerated image that can be efficiently rendered.
 ---
 
 ## Constructor
