--- a/contents/docs/classes/tile-layer/index.mdx
+++ b/contents/docs/classes/tile-layer/index.mdx
@@ -3,6 +3,8 @@ title: TileLayer
 description: TileLayer represents a grid of tiles within the map. Access via the 'tilemap' submodule.
 ---
 
+Inherits from [Layer](/docs/classes/layer).
+
 
 ## Properties
 <hr style={{marginBottom: 0}} />
