--- a/contents/docs/classes/transform/index.mdx
+++ b/contents/docs/classes/transform/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Transform
-description: Transform represents a 2D transformation with position, rotation, and scale. Access via the '' submodule.
+description: Transform represents a 2D transformation with position, rotation, and scale.
 ---
 
 ## Constructor
