--- a/contents/docs/classes/vertex/index.mdx
+++ b/contents/docs/classes/vertex/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Vertex
-description: A vertex with position, color, and texture coordinates. Access via the '' submodule.
+description: A vertex with position, color, and texture coordinates.
 ---
 
 ## Constructor
