--- a/contents/guides/game-essentials/vector-physics/index.mdx
+++ b/contents/guides/game-essentials/vector-physics/index.mdx
@@ -30,7 +30,7 @@ Multiply velocity by delta time to keep movement frame-rate independent.
 
 <img src="/images/velocity.webp" alt="Velocity motion equation as code" width="400" style={{marginLeft: "auto", marginRight: "auto"}} />
 
-```python
+```python showLineNumbers
 import pykraken as kn
 
 kn.init()
