--- a/contents/docs/classes/font/index.mdx
+++ b/contents/docs/classes/font/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Font
-description: A font typeface for rendering text. Access via the '' submodule.
+description: A font typeface for rendering text.
 ---
 
 ## Constructor
