--- a/contents/docs/classes/timer/index.mdx
+++ b/contents/docs/classes/timer/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Timer
-description: A timer for tracking countdown durations with pause/resume functionality. Access via the '' submodule.
+description: A timer for tracking countdown durations with pause/resume functionality.
 ---
 
 ## Constructor
