--- a/contents/docs/classes/vec2/index.mdx
+++ b/contents/docs/classes/vec2/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Vec2
-description: A 2D vector representing Cartesian coordinates. Access via the '' submodule.
+description: A 2D vector representing Cartesian coordinates.
 ---
 
 ## Constructor
