--- a/contents/guides/game-essentials/fonts-and-text/index.mdx
+++ b/contents/guides/game-essentials/fonts-and-text/index.mdx
@@ -134,11 +134,12 @@ dialogue.text = "This long text will automatically wrap at 300 pixels."
 
 Here's a full example with score display and title screen:
 
-```python
+```python:space_shooter.py showLineNumbers
 import pykraken as kn
 
 SCN_WIDTH, SCN_HEIGHT = 800, 600
 SCN_SIZE = kn.Vec2(SCN_WIDTH, SCN_HEIGHT)
+BG_COLOR = kn.Color(20, 20, 40)
 
 kn.init()
 kn.window.create("Text Example", SCN_WIDTH, SCN_HEIGHT)
@@ -153,6 +154,7 @@ large_font = kn.Font("fonts/arial.ttf", 64)
 title = kn.Text(large_font)
 title.text = "SPACE SHOOTER"
 title.color = kn.Color(100, 200, 255)
+title_layout = kn.Vec2(1/2, 1/3)
 
 instructions = kn.Text(medium_font)
 instructions.text = "Press SPACE to start"
@@ -162,26 +164,28 @@ score = 0
 score_text = kn.Text(small_font)
 score_text.text = f"Score: {score}"
 score_text.color = kn.Color.YELLOW
+score_pos = kn.Vec2(10)
 
 fps_text = kn.Text(small_font)
 fps_text.color = kn.Color.GRAY
+fps_pos = kn.Vec2(SCN_WIDTH - 10, 10)
 
 game_started = False
 player_rect = kn.Rect(0, 0, 40, 40)
-player_rect.center = (SCN_WIDTH / 2, SCN_HEIGHT - 100)
+player_rect.center = kn.Vec2(SCN_WIDTH / 2, SCN_HEIGHT - 100)
 
 while kn.window.is_open():
     kn.event.poll()
     dt = kn.time.get_delta()
 
-    kn.renderer.clear(kn.Color(20, 20, 40))
+    kn.renderer.clear(BG_COLOR)
 
     if not game_started:
         # Title screen
         if kn.key.is_just_pressed(kn.K_SPACE):
             game_started = True
 
-        title.draw(kn.Vec2(SCN_WIDTH / 2, SCN_HEIGHT / 3), kn.Anchor.CENTER)
+        title.draw(SCN_SIZE * title_layout, kn.Anchor.CENTER)
         instructions.draw(SCN_SIZE / 2, kn.Anchor.CENTER)
     else:
         # Game screen
@@ -198,11 +202,11 @@ while kn.window.is_open():
         kn.draw.rect(player_rect, kn.Color.GREEN)
 
         # Draw score in top-left
-        score_text.draw(kn.Vec2(10, 10))
+        score_text.draw(score_pos)
 
         # Draw FPS in top-right
         fps_text.text = f"FPS: {int(kn.time.get_fps())}"
-        fps_text.draw(kn.Vec2(SCN_WIDTH - 10, 10), kn.Anchor.TOP_RIGHT)
+        fps_text.draw(fps_pos, kn.Anchor.TOP_RIGHT)
 
     kn.renderer.present()
 
