update changelog and remove workflow

--- a/contents/docs/manual/changelog/index.mdx
+++ b/contents/docs/manual/changelog/index.mdx
@@ -9,6 +9,33 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ---
 
+## [1.6.1] - No Release Date
+
+<a id="added161"></a>
+### Added
+- New `mixer` submodule for advanced audio management.
+- `AudioPriority` enum for managing hardware track acquisition (MUSIC, UI, SFX).
+- Support for polyphonic sound effects via the `Sample` class and `max_polyphony` attribute.
+- Priority-based track stealing: high-priority sounds can now interrupt lower-priority ones if the 64-track limit is reached.
+- Global master volume control via `mixer.set_master_volume`.
+
+<a id="changed161"></a>
+### Changed
+- Refactored the audio backend to use SDL3_mixer.
+    - Renamed `Audio` class to `Sample` (for short sound effects).
+    - Renamed `AudioStream` class to `Stream` (for long music files).
+- Audio loading functions moved to `mixer.load_sample` and `mixer.load_stream`.
+- `Stream.looping` is now an RW property instead of just a setter method.
+- `Stream` playback position renamed from `current_time` to `playback_pos`.
+
+<a id="removed161"></a>
+### Removed
+- Removed `rewind` method from audio stream class (use `seek(0)` or restart playback).
+- Removed `miniaudio` dependency.
+
+
+---
+
 ## [1.6.0] - 2026-01-29
 
 <a id="added160"></a>
