--- a/contents/docs/index.mdx
+++ b/contents/docs/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: The PyKraken Documentation
+description: Welcome to the official documentation for PyKraken, a high-performance 2D game engine for Python.
 ---
 
 ## Introduction
@@ -13,3 +14,31 @@ started while remaining powerful enough for complex projects.
 
 These docs cover everything you need to work with PyKraken, from installation
 and guides to core concepts, APIs, and best practices.
+
+## Explore the Documentation
+
+The documentation is divided into four main sections:
+
+### Preface
+*How to read these docs.*
+Learn about the documentation structure, how to navigate it, and how to contribute to its development.
+
+[Preface →](/docs/preface)
+
+### Manual
+*Core concepts & conventions.*
+Essential information about Kraken Engine including constants, keycode vs scancode handling, and framework comparisons.
+
+[Manual →](/docs/manual)
+
+### Classes
+*Object-oriented API reference.*
+Complete documentation for all classes in Kraken Engine, including sprites, cameras, shaders, and more.
+
+[View Classes →](/docs/classes)
+
+### Functions
+*Functional API reference.*
+Comprehensive reference for all function modules available in Kraken Engine, organized by category such as Collision, Draw, and Input.
+
+[View Functions →](/docs/functions)
